[gd_scene load_steps=5 format=3 uid="uid://dihk8v6d1am1c"]

[ext_resource type="Script" path="res://screens/SettingsMenuConfig.gd" id="1"]
[ext_resource type="FontFile" path="res://assets/liberation_serif.tres" id="2"]
[ext_resource type="PackedScene" path="res://userInterface/But_ChangeScene.tscn" id="3"]

[sub_resource type="Theme" id="1"]
default_font = ExtResource("2")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = SubResource("1")
script = ExtResource("1")
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
alignment = 1

[node name="RootVboxVisualControls" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="VisualControlsLabel" type="Label" parent="Panel/HBoxContainer/RootVboxVisualControls"]
layout_mode = 2
text = "Visual Controls"

[node name="VisualControlsVBox" type="VBoxContainer" parent="Panel/HBoxContainer/RootVboxVisualControls/VisualControlsLabel"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5

[node name="HBoxFontSize" type="HBoxContainer" parent="Panel/HBoxContainer/RootVboxVisualControls/VisualControlsLabel/VisualControlsVBox"]
layout_mode = 2

[node name="FontLabel" type="Label" parent="Panel/HBoxContainer/RootVboxVisualControls/VisualControlsLabel/VisualControlsVBox/HBoxFontSize"]
layout_mode = 2
text = "Font Size:"

[node name="FontSizeSlider" type="HSlider" parent="Panel/HBoxContainer/RootVboxVisualControls/VisualControlsLabel/VisualControlsVBox"]
layout_mode = 2
min_value = 1.0
max_value = 5.0
value = 5.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="BrightnessLabel" type="Label" parent="Panel/HBoxContainer/RootVboxVisualControls/VisualControlsLabel/VisualControlsVBox"]
layout_mode = 2
text = "Brightness:"

[node name="BrightnessSlider" type="HSlider" parent="Panel/HBoxContainer/RootVboxVisualControls/VisualControlsLabel/VisualControlsVBox"]
layout_mode = 2
min_value = 1.0
max_value = 5.0
value = 5.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="RootVboxPlayerPreferences" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/RootVboxPlayerPreferences"]
layout_mode = 2
text = "Player Preferances"

[node name="VBoxPlayerPreferances" type="VBoxContainer" parent="Panel/HBoxContainer/RootVboxPlayerPreferences/Label"]
layout_mode = 0

[node name="HBoxDisplayName" type="HBoxContainer" parent="Panel/HBoxContainer/RootVboxPlayerPreferences/Label/VBoxPlayerPreferances"]
layout_mode = 2

[node name="DisplayNameLabel" type="Label" parent="Panel/HBoxContainer/RootVboxPlayerPreferences/Label/VBoxPlayerPreferances/HBoxDisplayName"]
layout_mode = 2
text = "Display Name:"

[node name="DisplayNameLineEdit" type="LineEdit" parent="Panel/HBoxContainer/RootVboxPlayerPreferences/Label/VBoxPlayerPreferances"]
layout_mode = 2

[node name="VBoxRiskFactor" type="VBoxContainer" parent="Panel/HBoxContainer/RootVboxPlayerPreferences/Label/VBoxPlayerPreferances"]
layout_mode = 2

[node name="HBoxRiskFactor" type="HBoxContainer" parent="Panel/HBoxContainer/RootVboxPlayerPreferences/Label/VBoxPlayerPreferances/VBoxRiskFactor"]
layout_mode = 2

[node name="RiskFactorLabel" type="Label" parent="Panel/HBoxContainer/RootVboxPlayerPreferences/Label/VBoxPlayerPreferances/VBoxRiskFactor/HBoxRiskFactor"]
layout_mode = 2
text = "Risk Factor Threshold:"

[node name="RiskSlider" type="HSlider" parent="Panel/HBoxContainer/RootVboxPlayerPreferences/Label/VBoxPlayerPreferances/VBoxRiskFactor"]
layout_mode = 2
min_value = 1.0
max_value = 5.0
value = 5.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="RootVboxGeneralSettings" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="GeneralSettingsLabel" type="Label" parent="Panel/HBoxContainer/RootVboxGeneralSettings"]
layout_mode = 2
text = "General Settings"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/RootVboxGeneralSettings/GeneralSettingsLabel"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5

[node name="Label" type="Label" parent="Panel/HBoxContainer/RootVboxGeneralSettings/GeneralSettingsLabel/VBoxContainer"]
layout_mode = 2
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="Panel/HBoxContainer/RootVboxGeneralSettings/GeneralSettingsLabel/VBoxContainer"]
layout_mode = 2
max_value = 10.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="HBoxClosedCaptions" type="HBoxContainer" parent="Panel/HBoxContainer/RootVboxGeneralSettings/GeneralSettingsLabel/VBoxContainer"]
layout_mode = 2

[node name="ClosedCaptionsLabel" type="Label" parent="Panel/HBoxContainer/RootVboxGeneralSettings/GeneralSettingsLabel/VBoxContainer/HBoxClosedCaptions"]
layout_mode = 2
text = "Closed Captions:"

[node name="ClosedCaptionsCheckBox" type="CheckBox" parent="Panel/HBoxContainer/RootVboxGeneralSettings/GeneralSettingsLabel/VBoxContainer/HBoxClosedCaptions"]
layout_mode = 2

[node name="HBoxDevConsole" type="HBoxContainer" parent="Panel/HBoxContainer/RootVboxGeneralSettings/GeneralSettingsLabel/VBoxContainer"]
layout_mode = 2

[node name="DevConsoleLabel" type="Label" parent="Panel/HBoxContainer/RootVboxGeneralSettings/GeneralSettingsLabel/VBoxContainer/HBoxDevConsole"]
layout_mode = 2
text = "Developer Console:"

[node name="DevConsoleCheckbox" type="CheckBox" parent="Panel/HBoxContainer/RootVboxGeneralSettings/GeneralSettingsLabel/VBoxContainer/HBoxDevConsole"]
layout_mode = 2

[node name="RootVboxVisualControls2" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/HBoxContainer/RootVboxVisualControls2"]
layout_mode = 2
text = "Visual Controls"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/RootVboxVisualControls2/Label2"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5

[node name="HBoxThemes" type="HBoxContainer" parent="Panel/HBoxContainer/RootVboxVisualControls2/Label2/VBoxContainer"]
layout_mode = 2

[node name="ThemesLabel" type="Label" parent="Panel/HBoxContainer/RootVboxVisualControls2/Label2/VBoxContainer/HBoxThemes"]
layout_mode = 2
text = "Theme Preference:"

[node name="ThemeItemList" type="ItemList" parent="Panel/HBoxContainer/RootVboxVisualControls2/Label2/VBoxContainer"]
layout_mode = 2
auto_height = true

[node name="HBoxVirtualKeyboardEnabled" type="HBoxContainer" parent="Panel/HBoxContainer/RootVboxVisualControls2/Label2/VBoxContainer"]
layout_mode = 2

[node name="VisualKeyBoardLabel" type="Label" parent="Panel/HBoxContainer/RootVboxVisualControls2/Label2/VBoxContainer/HBoxVirtualKeyboardEnabled"]
layout_mode = 2
text = "Virtual Keyboard"

[node name="VisualKeyboardCheckBox" type="CheckBox" parent="Panel/HBoxContainer/RootVboxVisualControls2/Label2/VBoxContainer/HBoxVirtualKeyboardEnabled"]
layout_mode = 2

[node name="HBoxKeyboardLayout" type="HBoxContainer" parent="Panel/HBoxContainer/RootVboxVisualControls2/Label2/VBoxContainer"]
layout_mode = 2

[node name="LayoutLabel" type="Label" parent="Panel/HBoxContainer/RootVboxVisualControls2/Label2/VBoxContainer/HBoxKeyboardLayout"]
layout_mode = 2
text = "Layout Preference:"

[node name="LayoutItemList" type="ItemList" parent="Panel/HBoxContainer/RootVboxVisualControls2/Label2/VBoxContainer"]
layout_mode = 2
auto_height = true

[node name="HBoxBottomRow" type="HBoxContainer" parent="Panel"]
layout_mode = 0
anchor_left = 0.500488
anchor_right = 0.595215
alignment = 1

[node name="SaveButton" type="Button" parent="Panel/HBoxBottomRow"]
layout_mode = 2
text = "Save Settings"

[node name="But_ChangeScene" parent="Panel/HBoxBottomRow" instance=ExtResource("3")]
layout_mode = 2
text = "Back"
